--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   // "editor.rulers": [80],
   "editor.wordWrapColumn": 80,
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "cSpell.words": [
+    "danzabilidad",
+    "dimensionalidad",
+    "escalabilidad",
+    "sobreajuste"
+  ]
 }
